# re-call.ai

./: .env.example  .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  MVP_QUICK_START.md  MVP_TEXT_COMPLETE.md  README.md  env.example  hello.py  pyproject.toml  test_mem0_comprehensive.py  test_mem0_full_validation.py  test_mem0_local.py  test_mem0_platform.py  test_mem0_simple.py
app/: config.py  main.py
app/api/: auth.py  memories.py  search.py
app/models/: memory.py  user.py
app/services/: auth_service.py  llm_service.py  memory_service.py
app/utils/: exception_handlers.py  exceptions.py  logger.py
docs/: backend_tech_doc.md  development_progress_tracker.md  documentation_updates_summary.md  market_research.md  mem0_evaluation_report.md  product.md  re-call_tech_arch.md  supermemory_tech_arch.md  user_scenarios.md
re-call-backend/: dev-requirements.txt
re-call-backend/app/: config.py  main.py
re-call-backend/app/api/: records.py
re-call-backend/app/services/: memory_service.py
re-call-backend/app/utils/: logger.py
re-call-backend/tests/test_api/: test_search.py
supermemory-backend/: dev-requirements.txt
supermemory-backend/app/: config.py  main.py
supermemory-backend/app/api/: auth.py
supermemory-backend/app/models/: record.py
tests/: enhanced_test.py  test_mem0_comprehensive.py  test_mem0_full_validation.py  test_mem0_local.py  test_mem0_platform.py  test_memory_api.py
tests/test_services/: test_database.py  test_memory_service.py  test_task2_1_mem0_integration.py  test_task2_2_data_models.py  test_task2_3_error_handling.py
(+7 files in other folders)
